# fileUtils

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/common/: CMakeLists.txt  FileErrorCode.h  LogHandler.cpp  LogHandler.h  Macro.h
src/fileutils/: CMakeLists.txt  FileErrorCode.h  FileManager.cpp  FileManager.h  FileSystem.cpp  FileSystem.h  LogHandler.cpp
src/platform/: CMakeLists.txt  FileSystemPlatform.h  FileSystem_Windows.cpp  FileSystem_Windows.h
src/submodules/: CMakeLists.txt
tests/: CMakeLists.txt  FileSystemTests.cpp
